# arxiv-rag

./: .gitignore  RAG.ipynb  RAG2.ipynb  README.md  arxiv_scrape_results.csv  arxiv_scrape_results_filtered.csv  combined_output_without_context.jsonl  docker-compose.yaml  final_paper_list.csv  final_papers.json  initial_papers.json  pyproject.toml  test.py  test1.py  utils.py
data/: combined_qa_with_context.jsonl
data/markdown/: 2505.00312.md  2505.00337.md  2505.00426.md  2505.00986.md  2505.00998.md  2505.01007.md  2505.01263.md  2505.01406.md  2505.01583.md  2505.01657.md  2505.01713.md  2505.01958.md  2505.02018.md  2505.02048.md
data/qa_datasets/: 2505.00312.jsonl  2505.00337.jsonl  2505.00426.jsonl  2505.00452.jsonl  2505.00482.jsonl  2505.00584.jsonl  2505.00681.jsonl  2505.00703.jsonl  2505.00986.jsonl  2505.00998.jsonl  2505.01007.jsonl  2505.01016.jsonl  2505.01263.jsonl  2505.01313.jsonl  2505.01406.jsonl  2505.01583.jsonl  2505.01657.jsonl  2505.01713.jsonl  2505.01958.jsonl  2505.01996.jsonl  2505.02018.jsonl  2505.02048.jsonl
engine/: embedding.py  llm.py  main.py  utils.py
init_vector_stores/: abstracts.py  papers.py
markdown/: 2505.00452.md  2505.00482.md  2505.00584.md  2505.00681.md  2505.00703.md  2505.01016.md  2505.01313.md  2505.01996.md
prepare/: dataset.py
scraping/: download.py  find_papers.py  metadata.py
src/data/: __init__.py  abstracts.py  papers.py
src/streamlit_ui/: agents.py  app.py  components.py  config.py
streamlit_ui/: app.py  components.py
vector_stores/: abstracts.py  papers.py  utils.py
