[project]
name = "arxiv-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.5",
    "arxiv>=2.2.0",
    "arxivscraper>=0.0.5",
    "docling>=2.15.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-docling>=0.2.0",
    "langchain-huggingface>=0.2.0",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.18",
    "langchain-qdrant>=0.2.0",
    "llama-index>=0.12.38",
    "llama-index-llms-ollama>=0.5.6",
    "pandas>=2.2.3",
    "pymupdf>=1.26.0",
    "pypdf>=5.5.0",
    "qdrant-client>=1.14.2",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "unstructured[md]>=0.17.2",
]
